# ComfyUI-Easy-Sam3

./: .gitignore  README.md  README_CN.md  __init__.py  nodes.py  pyproject.toml  utils.py
locales/en/: nodeDefs.json
locales/zh/: nodeDefs.json
sam3/: model_builder.py  train_masks_ops.py
sam3/model/: decoder.py  io_utils.py  sam3_image.py  sam3_image_processor.py  sam3_tracker_base.py  sam3_tracking_predictor.py  sam3_video_base.py  sam3_video_inference.py  sam3_video_predictor.py
sam3/model/utils/: sam1_utils.py
sam3/perflib/: associate_det_trk.py
sam3/perflib/tests/: tests.py
